k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepagents-service
spec:
  selector:
    app: deepagents
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
